# lunasched

./: .gitignore  Cargo.toml  LICENSE  README.md  install  install.sh  lunasched-config.yaml  lunasched-example.toml  lunasched-sudoers  lunasched.service  lunasched_1.2.4-1_amd64.deb  uninstall
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: ipc.rs  job.rs  lib.rs  schedule.rs
daemon/: Cargo.toml
daemon/src/: config.rs  db.rs  main.rs  metrics.rs  migrations.rs  notifier.rs  resource_manager.rs  scheduler.rs
debian/: postinst  postrm  prerm
docs/: DEBIAN_INSTALL.md  PRODUCTION_JOBS.md
