[package]
name = "lunasched"
version = "1.3.2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
common = { path = "../common" }
comfy-table = "7.0"
csv = "1.3"
chrono = "0.4"
