[package]
name = "lunasched-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
common = { path = "../common" }
cron = "0.12"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
fern = "0.6"
rusqlite = { version = "0.29", features = ["bundled"] }
nix = { version = "0.27", features = ["user", "process"] }

